# commerce-data-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
config/: __init__.py  settings.py
config/queries/: extract_events.sql
scripts/: run_pipeline.py  setup_localstack.py
src/: __init__.py
src/pipeline/: __init__.py  pipeline.py
src/pipeline/extractors/: __init__.py  bigquery_extractor.py
src/pipeline/loaders/: __init__.py  s3_loader.py
