[project]
name = "ga4-data-pipeline"
version = "0.1.0"
description = "GA4 data pipeline for bronze layer processing"
requires-python = ">=3.9"

dependencies = [
    "google-cloud-bigquery>=3.13.0",
    "boto3>=1.34.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ga4_pipeline"]